# no_mans_space

./: README.md
GRAPHICS/Engine/: Engine.sln  Engine.vcxproj  Engine.vcxproj.filters
GRAPHICS/build-engine-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  engine.ilk  rules.ninja
GRAPHICS/build-engine-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-9863702ef66efafdb551.json  cmakeFiles-v1-6dfe4e568a5ad15acb75.json  codemodel-v2-7ae24133168227434f5b.json  index-2020-11-16T14-58-49-0598.json  target-engine-Debug-dc2a878c4a7da9c63c76.json  target-engine_autogen-Debug-f73047956e92ea3dc892.json
GRAPHICS/build-engine-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/engine_autogen/: deps
GRAPHICS/build-engine-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/engine_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
GRAPHICS/engine/: .gitignore  CMakeLists.txt  main.cpp
GRAPHICS/engine/common/: NoiseFilter.h  PlanetFace.h  PlanetMaker.h  PlanetSettings.cpp  ShapeGenerator.h  SurfaceNoiseSettings.h  Vector2.h
GRAPHICS/engine/engine/: CMakeLists.txt  engine.cpp  engine.h
GRAPHICS/engine/engine/objects/gold_skull/: diffuse.DDS  specular.DDS
GRAPHICS/engine/engine/objects/gold_smooth/: specular.DDS
GRAPHICS/engine/g_engine/: g_engine.cpp  g_engine.h
PROCEDURAL/CPPLib/ProcLib/: Mesh.h  PlanetFace.h  PlanetMaker.h  PlanetSettings.cpp  PlanetSettings.h  ProcLib.cpp  ProcLib.sln  ProcLib.vcxproj  ProcLib.vcxproj.filters  ShapeGenerator.h  SpaceSettings.cpp  SpaceSettings.h  SurfaceNoiseSettings.h  Vector3.cpp  Vector3.h
PROCEDURAL/CPPLib/ProcLib/Debug/: ProcLib.exe.recipe  ProcLib.ilk  ProcLib.vcxproj.FileListAbsolute.txt  vc142.idb
PROCEDURAL/CPPLib/ProcLib/Debug/ProcLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProcLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PROCEDURAL/CPPLib/ProceduralLib/TP1_2_code/: fshader.glsl  gamecubeobject.cpp  gamecubeobject.h  gameearthobject.cpp  gameearthobject.h  gameengine.pro  gamemoonobject.cpp  gamemoonobject.h  gameobject.cpp  gameobject.h  gamescene.cpp  gamescene.h  gamesunobject.cpp  gamesunobject.h  gameterrainobject.cpp  gameterrainobject.h  main.cpp  textures.qrc  transform.cpp  transform.h  vshader.glsl
PROCEDURAL/CPPLib/ProceduralLib/TP1_2_code/ProceduralLib/: Noise.h  Vector3.h
PROCEDURAL/CPPLib/ProceduralLib/build-gameengine-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
PROCEDURAL/CPPLib/ProceduralLib/build-gameengine-Desktop_x86_windows_msvc2019_pe_64bit-Debug/debug/: gameengine.ilk  moc_gamescene.cpp  qrc_shaders.cpp
PROCEDURAL/ProceduralUnityTests/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  ProceduralUnityTests.sln
PROCEDURAL/ProceduralUnityTests/Assets/: NoiseFilter.cs  PlanetBehavior.cs  PlanetFace.cs  PlanetMaker.cs  PlanetSettings.cs  PlanetTestTool.cs  ShapeGenerator.cs  SolarSystemMaker.cs  SpaceMaker.cs  SphereMaker.cs
PROCEDURAL/ProceduralUnityTests/Assets/Animation/: PlanetBehavior.cs
PROCEDURAL/ProceduralUnityTests/Assets/Editor/: CommonSettingsEditor.cs  PlanetEditor.cs
PROCEDURAL/ProceduralUnityTests/Assets/Noise/: Noise.cs  NoiseFilter.cs
PROCEDURAL/ProceduralUnityTests/Assets/Scenes/: SampleScene.unity
PROCEDURAL/ProceduralUnityTests/Assets/Settings/: DefaultPlanetSettings.asset  DefaultSolarSystemSettings.asset  DefaultSpaceSettings.asset  DefaultSunSettings.asset
PROCEDURAL/ProceduralUnityTests/Assets/SpaceGene/: CommonSettings.cs  PlanetMaker.cs  SolarSystemMaker.cs  SpaceMaker.cs  SpaceSettings.cs  SunMaker.cs
PROCEDURAL/ProceduralUnityTests/Assets/SpaceGene/Planet/: NoiseSettings.cs  PlanetFace.cs  PlanetMaker.cs  PlanetSettings.cs  ShapeGenerator.cs
PROCEDURAL/ProceduralUnityTests/Assets/SpaceGene/SolarSystem/: SolarSystemMaker.cs  SolarSystemSettings.cs
PROCEDURAL/ProceduralUnityTests/Assets/SpaceGene/Space/: SpaceMaker.cs  SpaceSettings.cs
PROCEDURAL/ProceduralUnityTests/Assets/SpaceGene/Sun/: SunMaker.cs  SunSettings.cs
PROCEDURAL/ProceduralUnityTests/ProjectSettings/: ProjectSettings.asset
STRUCTURE/: .gitignore
STRUCTURE/engine/ecs/: CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  component.h  componentmanager.cpp  componentmanager.h  displaysystem.cpp  displaysystem.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  mainwindow.cpp  mainwindow.h  motionstate.h  observer.h  physics.cpp  physics.h  physicsmanager.cpp  physicsmanager.h  physicssystem.cpp  physicssystem.h  signatures.cpp  subject.h  system.cpp  system.h  transform.cpp  transform.h  transformmanager.cpp  transformmanager.h
STRUCTURE/engine/ecs/bullet/LinearMath/: CMakeLists.txt
STRUCTURE/engine/ecs/lib/Debug/: LinearMath_Debug.lib
STRUCTURE/engine/ecs/lib/Release/: BulletDynamics.lib
STRUCTURE/engine/ecsCpp/: .gitignore  CMakeLists.txt  displaysystem.cpp  entity.cpp  entitymanager.cpp  entitymanager.h  fbasicShader.glsl  geometryengine.cpp  main.cpp  motionstate.cpp  motionstate.h  physics.cpp  physics.h  physicssystem.cpp  physicssystem.h  render.cpp  render.h  rendermanager.cpp  rendermanager.h  rendersystem.cpp  rendersystem.h  signatures.cpp  system.cpp  transform.cpp  transform.h  transformmanager.h  vbasicShader.glsl
STRUCTURE/engine/ecsCpp/common/: controls.cpp  controls.hpp
STRUCTURE/engine/ecsQt/: CMakeLists.txt  entitymanager.h  geometryengine.h  mainwindow.cpp  mainwindow.h  physics.cpp  physicssystem.cpp  rendersystem.cpp  shaders.qrc  signatures.cpp  system.h  transform.cpp
STRUCTURE/engine/ecsQt/bullet/: CMakeLists.txt
STRUCTURE/engine/ecsQt/bullet/BulletCollision/: CMakeLists.txt
STRUCTURE/engine/ecsQt/bullet/BulletDynamics/: CMakeLists.txt
STRUCTURE/engine/ecsQt/lib/Release/: BulletCollision.lib  LinearMath.lib
UML/: NoMansSpace.vpp  NoMansSpace.vpp.bak_000f  NoMansSpace.vpp.bak_001d  NoMansSpace.vpp.bak_002d  NoMansSpace.vpp.bak_003d  NoMansSpace.vpp.bak_004d  NoMansSpace.vpp.bak_005d  NoMansSpace.vpp.bak_006d
